fix mobile spacing

--- a/src/StyleSheets/Header.css
+++ b/src/StyleSheets/Header.css
@@ -118,7 +118,7 @@
 /* @media (max-width: 519px) {
 } */
 
-@media (max-width: 601px) {
+@media (max-width: 630px) {
   .header-inner-container {
     margin: 0 2rem;
   }
