--- a/src/StyleSheets/Projects.css
+++ b/src/StyleSheets/Projects.css
@@ -29,7 +29,7 @@
   margin-bottom: 1rem;
 }
 
-@media (max-width: 930px) {
+@media (max-width: 960px) {
   .projects-proj-item > div {
     display: flex;
     flex-direction: column;
